--- a/galaxy.yml
+++ b/galaxy.yml
@@ -20,7 +20,7 @@ tags:
     - firewall
     - security
     - fortinet
-repository: "https://github.com/fortinet-ansible-dev/ansible-galaxy-fortiswitch-collection/tree/fsw_v7.0.0/galaxy_1.2.0"
-documentation: "https://ansible-galaxy-fortiswitch-docs.readthedocs.io/en/galaxy-1.2.0"
+repository: "https://github.com/fortinet-ansible-dev/ansible-galaxy-fortiswitch-collection/tree/main"
+documentation: "https://ansible-galaxy-fortiswitch-docs.readthedocs.io/en/main"
 homepage: "https://www.fortinet.com"
 issues: "https://github.com/fortinet-ansible-dev/ansible-galaxy-fortiswitch-collection/issues"
